--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <button class="close-menu-activation close"><i data-feather="x"></i></button>
                     </div>
                 </div>
-                <p class="discription">Programmer And an open-source enthusiast and maintainer.</p>
+                <p class="discription">Programmer And an open-source enthusiast.</p>
             </div>
             <div class="content">
                 <ul class="primary-menu nav nav-pills">
@@ -161,7 +161,7 @@
                                     </h1>
 
                                     <div>
-                                        <p class="description">I'm Self-taught Programmer And a Criptography enthusiast and Competitive Coder.</p>
+                                        <p class="description">I'm Self-taught Programmer And a Cryptography enthusiast and Competitive Coder.</p>
                                     </div>
                                 </div>
                                 <div class="row">
