updated a working contact me page

--- a/index.html
+++ b/index.html
@@ -1345,6 +1345,13 @@
                                     </div>
 
                                     <div class="col-lg-12">
+                                      <div class="form-group">
+                                          <label for="subject">subject</label>
+                                          <input class="form-control form-control-sm" id="subject" name="subject" type="text">
+                                      </div>
+                                    </div>
+
+                                    <div class="col-lg-12">
                                         <div class="form-group">
                                             <label for="message">Your Message</label>
                                             <textarea name="message" id="contact-message" cols="30" rows="10"></textarea>
