Updated The Multiple Page for show caseing the projects

--- a/index.html
+++ b/index.html
@@ -316,13 +316,13 @@
                                     <i data-feather="settings"></i>
                                 </div>
                                 <div class="content">
-                                    <h4 class="title"><a href="#">Artificial Intelligence</a></h4>
+                                    <h4 class="title"><a href="">Artificial Intelligence</a></h4>
                                     <p class="description">I am enthusiast on developing AI solutions that can be used in real world applications.</p>
 
-                                    <a class="read-more-button" href="#"><i class="feather-arrow-right"></i></a>
+                                    <a class="read-more-button" href=""><i class="feather-arrow-right"></i></a>
                                 </div>
                             </div>
-                            <a class="over-link" href="#"></a>
+                            <a class="over-link" href="/pages/ai_project.html"></a>
                         </div>
                     </div>
                     <!-- End SIngle Service -->
